[package]
name = "ark-sub-bls12-381"
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "The BLS12-381 pairing-friendly elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-bls12-381/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/std", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves/" }

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }



[dev-dependencies]
hex = "^0.4.0"


[features]
default = [ "curve", "std" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-serialize/std", "ark-bls12-381/std" ]

curve = [ "scalar_field" ]
scalar_field = []

